@@ -1,6 +1,8 @@
 5.3: ??/??/2020
 	* CORE: More improvements to the TransactionManager connection and savepoint handling.
-	* JDBC: Update the DB2 driver class.  Thanks to mauro-palumbo. 
+	* CORE: Added a getInternalConnection() method to DatabaseConnection to access underlying objects.
+	* JDBC: Update the DB2 driver class.  Thanks to mauro-palumbo.
+	* JDBC: Added support for create table if not exists for HSQLDB versions 2.3.X and greater.  Thanks to lukewhitt.
 
 5.2: 11/14/2020
 	* JDBC: Refactored the JDBC package to make it java9 compliant by moving all classes under jdbc subpackage.
